@@ -22,7 +22,8 @@ import org.bgee.model.anatdev.Sex;
 import org.bgee.model.anatdev.TaxonConstraint;
 import org.bgee.model.anatdev.Sex.SexEnum;
 import org.bgee.model.anatdev.Strain;
-import org.bgee.model.dao.api.expressiondata.ConditionDAO;
+import org.bgee.model.dao.api.expressiondata.call.ConditionDAO;
+import org.bgee.model.dao.api.expressiondata.rawdata.DAORawDataConditionFilter;
 import org.bgee.model.dao.api.expressiondata.rawdata.RawDataConditionDAO;
 import org.bgee.model.dao.api.ontologycommon.RelationDAO;
 import org.bgee.model.dao.api.ontologycommon.RelationDAO.RelationTO;
@@ -37,7 +38,8 @@ import org.bgee.model.species.Taxon;
  * 
  * @author  Valentine Rech de Laval
  * @author  Frederic Bastian
- * @version Bgee 13, Nov. 2016
+ * @author  Julien Wollbrett
+ * @version Bgee 15.0, Oct. 2022
  * @since   Bgee 13, Dec. 2015
  */
 //TODO: unit tests for all getTaxonOntology... methods
@@ -370,8 +372,7 @@ public class OntologyService extends CommonService {
                     this.getServiceFactory().getTaxonConstraintService()
                         .loadAnatEntityTaxonConstraints(speciesIds, requestedAnatEntities.keySet())
                         .collect(Collectors.toSet()),
-                relationTaxonConstraints, relationTypes,
-                this.getServiceFactory(), AnatEntity.class);
+                relationTaxonConstraints, relationTypes, AnatEntity.class);
 
         log.debug("AnatEntityOntology created in {} ms", System.currentTimeMillis() - startTimeInMs);
         return log.traceExit(ont);
@@ -473,17 +474,75 @@ public class OntologyService extends CommonService {
     public MultiSpeciesOntology<DevStage, String> getDevStageOntology(Collection<Integer> speciesIds, 
             Collection<String> devStageIds, boolean getAncestors, boolean getDescendants) {
         log.traceEntry("{}, {}, {}, {}", speciesIds, devStageIds, getAncestors, getDescendants);
+        Set<RelationTO<String>> rels = this.getDevStageRelationTOs(speciesIds, devStageIds,
+                getAncestors, getDescendants);
+        Collection<DevStage> requestedDevStages = this.getServiceFactory().getDevStageService()
+                .loadDevStages(speciesIds, true, this.getRequestedEntityIds(devStageIds, rels))
+                .collect(Collectors.toSet());
+        return this.getDevStageOntology(speciesIds, requestedDevStages, rels);
+    }
 
+    /**
+     * Retrieve the {@code MultiSpeciesOntology} of {@code DevStage}s for the requested species ids, dev. stages,
+     * and relation status.
+     * <p>
+     * The returned {@code MultiSpeciesOntology} contains ancestors and/or descendants according to
+     * {@code getAncestors} and {@code getDescendants}, respectively.
+     * If both {@code getAncestors} and {@code getDescendants} are {@code false},
+     * then only relations between provided developmental stages are considered.
+     * 
+     * @param speciesIds        A {@code Collection} of {@code Integer}s that are IDs of species
+     *                          which to retrieve dev. stages for. If several IDs are provided,
+     *                          dev. stages existing in any of them will be retrieved.
+     *                          Can be {@code null} or empty.
+     * @param devStages       A {@code Collection} of {@code DevStage}s that are dev. stages
+     *                          of the {@code MultiSpeciesOntology} to retrieve. Can be {@code null} or empty.
+     * @param getAncestors      A {@code boolean} defining whether the ancestors of the selected
+     *                          dev. stages, and the relations leading to them, should be retrieved.
+     * @param getDescendants    A {@code boolean} defining whether the descendants of the selected
+     *                          dev. stages, and the relations leading to them, should be retrieved.
+     * @return                  The {@code MultiSpeciesOntology} of the {@code DevStage}s for the requested species,
+     *                          dev. stages, and relation status.
+     */
+    public MultiSpeciesOntology<DevStage, String> getDevStageOntologyFromDevStages(Collection<Integer> speciesIds,
+            Collection<DevStage> devStages, boolean getAncestors, boolean getDescendants) {
+        log.traceEntry("{}, {}, {}, {}", speciesIds, devStages, getAncestors, getDescendants);
+        Set<RelationTO<String>> rels = this.getDevStageRelationTOs(speciesIds,
+                devStages.stream().map(s -> s.getId()).collect(Collectors.toSet()),
+                getAncestors, getDescendants);
+        return log.traceExit(this.getDevStageOntology(speciesIds, devStages, rels));
+    }
+
+    /**
+     * Retrieve the {@code MultiSpeciesOntology} of {@code DevStage}s for the requested species ids, dev. stages,
+     * and relation status.
+     * <p>
+     * The returned {@code MultiSpeciesOntology} contains ancestors and/or descendants according to
+     * {@code getAncestors} and {@code getDescendants}, respectively.
+     * If both {@code getAncestors} and {@code getDescendants} are {@code false},
+     * then only relations between provided developmental stages are considered.
+     * 
+     * @param speciesIds        A {@code Collection} of {@code Integer}s that are IDs of species
+     *                          which to retrieve dev. stages for. If several IDs are provided,
+     *                          dev. stages existing in any of them will be retrieved.
+     *                          Can be {@code null} or empty.
+     * @param devStages         A {@code Collection} of {@code DevStage}s that are dev. stages
+     *                          of the {@code MultiSpeciesOntology} to retrieve. Can be {@code null} or empty.
+     * @param rels              A {@code Collection} of {@code RelationTO}s of {@code String} that are the relations
+     *                          to use to create the ontology
+     * @return                  The {@code MultiSpeciesOntology} of the {@code DevStage}s for the requested species,
+     *                          dev. stages, and relation status.
+     */
+    private MultiSpeciesOntology<DevStage, String> getDevStageOntology(Collection<Integer> speciesIds,
+            Collection<DevStage> devStages, Collection<RelationTO<String>> rels) {
+        log.traceEntry("{}, {}, {}", speciesIds, devStages, rels);
         long startTimeInMs = System.currentTimeMillis();
         log.debug("Start creation of DevStageOntology");
 
-        Set<RelationTO<String>> rels = this.getDevStageRelationTOs(speciesIds, devStageIds, 
-                getAncestors, getDescendants);
         //We use a Map notably in order to filter the taxon constraints for only the retrieved stages
         //XXX: should we allow the method loadDevStageTaxonConstraintBySpeciesIds to accept requested
         //dev stage IDs as arguments?
-        Map<String, DevStage> requestedDevStages = this.getServiceFactory().getDevStageService()
-                .loadDevStages(speciesIds, true, this.getRequestedEntityIds(devStageIds, rels))
+        Map<String, DevStage> requestedDevStages = devStages.stream()
                 .collect(Collectors.toMap(s -> s.getId(), s -> s));
         //there is no relation IDs for nested set models, so no TaxonConstraints. 
         //Relations simply exist if both the source and target of the relations 
@@ -493,8 +552,7 @@ public class OntologyService extends CommonService {
                 getServiceFactory().getTaxonConstraintService().loadDevStageTaxonConstraintBySpeciesIds(speciesIds)
                         .filter(tc -> requestedDevStages.containsKey(tc.getEntityId()))
                         .collect(Collectors.toSet()),
-                new HashSet<>(), EnumSet.of(RelationType.ISA_PARTOF),
-                this.getServiceFactory(), DevStage.class);
+                new HashSet<>(), EnumSet.of(RelationType.ISA_PARTOF), DevStage.class);
 
         log.debug("DevStageOntology created in {} ms", System.currentTimeMillis() - startTimeInMs);
         return log.traceExit(ont);
@@ -578,7 +636,7 @@ public class OntologyService extends CommonService {
         log.debug("Requested sex IDs: {}", requestedSexes);
         Ontology<Sex, String> ont = new Ontology<Sex, String>(speciesId,
                 requestedSexes, rels, EnumSet.of(RelationType.ISA_PARTOF),
-                this.getServiceFactory(), Sex.class);
+                Sex.class);
 
 
         log.debug("SexOntology created in {} ms", System.currentTimeMillis() - startTimeInMs);
@@ -637,7 +695,9 @@ public class OntologyService extends CommonService {
         if (strainIds == null || strainIds.isEmpty() ||
                 getDescendants && strainIds.contains(ConditionDAO.STRAIN_ROOT_ID)) {
             speciesStrainIds = this.getServiceFactory().getDAOManager().getRawDataConditionDAO()
-                    .getRawDataConditionsBySpeciesIds(Collections.singleton(speciesId),
+                    .getRawDataConditionsFromRawConditionFilters(
+                            Set.of(new DAORawDataConditionFilter(Set.of(speciesId),
+                                    null, null, null, null, null)),
                             EnumSet.of(RawDataConditionDAO.Attribute.STRAIN))
                             .stream()
                             .map(rawCondTO -> mapRawDataStrainToStrain(rawCondTO.getStrainId()).getId())
@@ -674,8 +734,7 @@ public class OntologyService extends CommonService {
         log.debug("Requested strains : {}", requestedStrains);
         Ontology<Strain, String> ont = new StrainOntology(speciesId,
                 requestedStrains, rels,
-                EnumSet.of(RelationType.ISA_PARTOF),
-                this.getServiceFactory(), Strain.class);
+                EnumSet.of(RelationType.ISA_PARTOF), Strain.class);
 
 
         log.debug("StrainOntology created in {} ms", System.currentTimeMillis() - startTimeInMs);
@@ -764,7 +823,7 @@ public class OntologyService extends CommonService {
                 .filter(r -> validTaxIds.contains(r.getSourceId()) &&
                         validTaxIds.contains(r.getTargetId()))
                 .collect(Collectors.toSet()),
-                EnumSet.of(RelationType.ISA_PARTOF), this.getServiceFactory(), Taxon.class));
+                EnumSet.of(RelationType.ISA_PARTOF), Taxon.class));
     }
     /**
      * Returns the {@code Taxon} {@code Ontology} for the taxa that is the least common ancestor
@@ -850,7 +909,7 @@ public class OntologyService extends CommonService {
                 //and we filer afterwards
                 .filter(t -> !lcaBgeeSpecies || t.isLca() || clonedTaxIds.contains(t.getId()))
                 .collect(Collectors.toSet()),
-            rels, EnumSet.of(RelationType.ISA_PARTOF), this.getServiceFactory(), Taxon.class));
+            rels, EnumSet.of(RelationType.ISA_PARTOF), Taxon.class));
     }
 
     private Set<RelationTO<String>> getAnatEntityRelationTOs(Collection<Integer> speciesIds,
